# server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  hw.qrc  zbnt_server@.service
cmake/: GenerateVersion.py
common/include/: MessageReceiver.hpp  Messages.hpp  Utils.hpp  Version.hpp
common/src/: MessageReceiver.cpp  Utils.cpp
daemon/: CMakeLists.txt  daemon.cfg  zbnt_daemon.service  zbnt_daemon@.service
daemon/include/: BitstreamManager.hpp  DiscoveryServer.hpp  FrameDetector.hpp  MeasurementServer.hpp  MessageReceiver.hpp  Messages.hpp  Settings.hpp  SimpleTimer.hpp  StatsCollector.hpp  TrafficGenerator.hpp  Utils.hpp  WorkerThread.hpp
daemon/include/dev/: AbstractDevice.hpp  AxiDma.hpp  AxiMdio.hpp  DmaBuffer.hpp  FrameDetector.hpp  LatencyMeasurer.hpp  SimpleTimer.hpp  StatsCollector.hpp  TrafficGenerator.hpp
daemon/src/: BitstreamManager.cpp  DiscoveryServer.cpp  FdtUtils.cpp  Main.cpp  MeasurementServer.cpp  MessageReceiver.cpp  Settings.cpp  Utils.cpp  WorkerThread.cpp
daemon/src/dev/: AbstractDevice.cpp  AxiDma.cpp  AxiMdio.cpp  DmaBuffer.cpp  FrameDetector.cpp  LatencyMeasurer.cpp  SimpleTimer.cpp  StatsCollector.cpp  TrafficGenerator.cpp
examples/: axi_tcp.cfg  pci_local.cfg
hw/: hw.qrc
include/: AbstractDevice.hpp  AxiDevice.hpp  BitstreamConfig.hpp  BitstreamManager.hpp  CfgUtils.hpp  DiscoveryServer.hpp  DmaBuffer.hpp  FdtUtils.hpp  FrameDetector.hpp  IrqThread.hpp  LatencyMeasurer.hpp  MeasurementServer.hpp  MessageReceiver.hpp  Messages.hpp  PciDevice.hpp  Settings.hpp  StatsCollector.hpp  TrafficGenerator.hpp  Utils.hpp  WorkerThread.hpp  ZbntLocalServer.hpp  ZbntServer.hpp  ZbntTcpServer.hpp
include/cores/: AbstractCore.hpp  AxiDma.hpp  AxiMdio.hpp  DmaBuffer.hpp  FrameDetector.hpp  LatencyMeasurer.hpp  PrController.hpp  SimpleTimer.hpp  StatsCollector.hpp  TrafficGenerator.hpp
include/dev/: AbstractDevice.hpp  AxiDma.hpp  AxiMdio.hpp  DmaBuffer.hpp  FrameDetector.hpp  LatencyMeasurer.hpp  SimpleTimer.hpp  StatsCollector.hpp  TrafficGenerator.hpp
src/: AbstractDevice.cpp  AxiDevice.cpp  BitstreamConfig.cpp  BitstreamManager.cpp  DiscoveryServer.cpp  DmaBuffer.cpp  FdtUtils.cpp  IrqThread.cpp  Main.cpp  MeasurementServer.cpp  MessageReceiver.cpp  PciDevice.cpp  Settings.cpp  Utils.cpp  WorkerThread.cpp  ZbntLocalServer.cpp  ZbntServer.cpp  ZbntTcpServer.cpp
src/cores/: AbstractCore.cpp  AxiDma.cpp  AxiMdio.cpp  DmaBuffer.cpp  FrameDetector.cpp  LatencyMeasurer.cpp  PrController.cpp  SimpleTimer.cpp  StatsCollector.cpp  TrafficGenerator.cpp
src/dev/: AbstractDevice.cpp  AxiDma.cpp  AxiMdio.cpp  DmaBuffer.cpp  FrameDetector.cpp  LatencyMeasurer.cpp  SimpleTimer.cpp  StatsCollector.cpp  TrafficGenerator.cpp
